# wasm-master

./: .gitignore  Cargo.toml  Dockerfile  README.md
archive/paxos-v0.0.1/acceptor/: Cargo.toml
archive/paxos-v0.0.1/acceptor/src/: lib.rs
archive/paxos-v0.0.2/acceptor/: Cargo.toml
archive/paxos-v0.0.2/acceptor/src/: lib.rs
archive/paxos-v0.0.3/grpc/: Cargo.toml
archive/paxos-v0.0.3/grpc/src/: proposer.rs
archive/simple-paxos-wasm/: Cargo.toml  build.rs
archive/simple-paxos-wasm/acceptor/: Cargo.toml
archive/simple-paxos-wasm/acceptor/src/: lib.rs
archive/simple-paxos-wasm/acceptor/wit/: acceptor.wit
archive/simple-paxos-wasm/learner/: Cargo.toml
archive/simple-paxos-wasm/proposer/: Cargo.toml
archive/simple-paxos-wasm/proposer/wit/: proposer.wit
archive/simple-paxos-wasm/src/: wasm_runtime.rs
archive/simple-paxos-wasm/wit-files/: interfaces.wit
archive/wrpc_v2/command-wrpc/: Cargo.toml
archive/wrpc_v2/paxos-wrpc/: Cargo.toml
archive/wrpc_v2/proposer-wrpc/: Cargo.toml
archive/wrpc_v2/proposer-wrpc/src/: lib.rs
paxos-rust/: Cargo.toml
paxos-rust/scripts/: start_nodes.sh
paxos-rust/src/: lib.rs  main_advanced.rs  state_machine.rs
paxos-rust/src/network/: distributed.rs  mod.rs
paxos-rust/src/paxos/: acceptor.rs  learner.rs
paxos-v0.0.2/command/: Cargo.toml
paxos-v0.0.2/proposer/: Cargo.toml
paxos-v0.0.2/proposer/src/: bindings.rs  lib.rs
paxos-wasm/composed-grpc/: Cargo.toml  build.rs  demo-client-grpc.sh  demo-nodes-grpc.sh  restart_node4.sh
paxos-wasm/composed-grpc/client/: Cargo.toml
paxos-wasm/composed-grpc/client-cli/: Cargo.toml
paxos-wasm/composed-grpc/client/src/: main.rs
paxos-wasm/composed-grpc/client_command_line/: Cargo.toml
paxos-wasm/composed-grpc/command/: Cargo.toml
paxos-wasm/composed-grpc/paxos-coordinator/: Cargo.toml
paxos-wasm/composed-grpc/src/: config.rs  coordinator_bindings.rs  failure_service.rs  grpc_service.rs  host_logger.rs  host_messenger.rs  macro_translation.rs  main.rs  paxos_bindings.rs  paxos_wasm.rs  run_paxos_service.rs  tests.rs  traits.rs  translation_layer.rs
paxos-wasm/core/acceptor/: Cargo.toml
paxos-wasm/core/storage/: Cargo.toml
paxos-wasm/core/tcp-server/: Cargo.toml
paxos-wasm/modular-grpc/: Cargo.toml  build.rs  demo-nodes-grpc.sh
paxos-wasm/modular-grpc/client/: Cargo.toml
paxos-wasm/modular-grpc/kv-store-agent/: Cargo.toml
paxos-wasm/modular-grpc/proposer-agent/: Cargo.toml
paxos-wasm/modular-grpc/src/: main.rs  standalone_config.rs
paxos-wasm/modular-ws/: Cargo.toml  build.rs  demo-nodes-coordinator-ws.sh  demo-nodes-ws.sh  run-demo-client.sh  run-local.sh
paxos-wasm/modular-ws/client/: Cargo.toml
paxos-wasm/modular-ws/old_scripts/: demo-nodes-ws.sh
paxos-wasm/modular-ws/serializer/: Cargo.toml
paxos-wasm/modular-ws/src/: config.rs  config.yaml  host_logger.rs  main.rs  paxos_wasm.rs  standalone_config.rs
paxos-wasm/modular-ws/tcp-server/: Cargo.toml
paxos-wasm/modular-ws/udp-client/: Cargo.toml
paxos-wasm/modular-ws/udp-server/: Cargo.toml
paxos-wasm/runner-ws/: Cargo.toml  deploy-remote.sh  force-stop-cluster.sh  metrics.txt  run-demo-client.sh  run-local-remote.sh  run-local-same-runtime.sh  run-local.sh  run-remote.sh  test.sh
paxos-wasm/runner-ws/src/: bindings.rs  config.remote.yaml  config.rs  config.yaml  host_control.rs  host_logger.rs  host_network_client.rs  host_network_server.rs  host_serializer.rs  host_storage.rs  main.rs  paxos_wasm.rs  run.rs  serializer.rs
pocs/tcp-server-polling-test/server/: Cargo.toml
pocs/wasm-overhead/wasm/: Cargo.toml
simple-paxos-demo/: Cargo.toml  README.md  build-wasm.sh  compose-wasm.sh  demo-client-grpc.sh  demo-nodes-grpc.sh  grpc-demo.sh  paxos-grpc.wac
simple-paxos-demo/grpc/: Cargo.toml  build.rs
simple-paxos-demo/grpc/acceptor-grpc/: Cargo.toml
simple-paxos-demo/grpc/client-grpc/: Cargo.toml
simple-paxos-demo/grpc/command-grpc/: Cargo.toml
simple-paxos-demo/grpc/kv-store-grpc/: Cargo.toml
simple-paxos-demo/grpc/learner-grpc/: Cargo.toml
simple-paxos-demo/grpc/paxos-grpc/: Cargo.toml
simple-paxos-demo/grpc/proposer-grpc/: Cargo.toml
simple-paxos-demo/grpc/proto/: host.proto
simple-paxos-demo/grpc/proto-grpc/: Cargo.toml  build.rs
simple-paxos-demo/grpc/src/: config.rs  grpc_service.rs  host_logger.rs  main.rs  old_main.rs  paxos_wasm.rs  translation_layer.rs
simple-paxos-demo/paxos-rust/: Cargo.toml
simple-paxos-demo/paxos-rust/scripts/: client_demo.sh
simple-paxos-demo/paxos-rust/src/: main.rs  main_advanced.rs  main_basic.rs  main_distributed.rs
simple-paxos-demo/paxos-rust/tests/: integration_test.rs
simple-paxos-demo/paxos-wasm/: Cargo.toml  build.rs
simple-paxos-demo/paxos-wasm/acceptor/: Cargo.toml
simple-paxos-demo/paxos-wasm/learner/: Cargo.toml
simple-paxos-demo/paxos-wasm/proposer/: Cargo.toml
simple-paxos-demo/paxos-wasm/src/: main.rs  old_run_wasm_paxos.rs  wasm_runtime.rs
simple-paxos-demo/paxos-wasm/utils/: Cargo.toml
simple-paxos-demo/scripts/: build_all_wasm.sh
simple-paxos-demo/shared/utils/: Cargo.toml
simple-paxos-demo/shared/wit/: paxos.wit
simple-paxos-demo/src/: acceptor.rs  learner.rs  main.rs  proposer.rs
simple-paxos-demo/src/paxos_rust/: acceptor.rs  learner.rs  proposer.rs
simple-paxos-demo/wit/: acceptor.wit  learner.wit  proposer.wit
simple-paxos-demo/wit/unused/: paxos-system.wit
simple-paxos-demo/wrpc_v1/command-wrpc/: Cargo.toml
simple-paxos-demo/wrpc_v1/learner-wrpc/: Cargo.toml
simple-paxos-demo/wrpc_v1/proposer-wrpc/: Cargo.toml
simple-paxos-demo/wrpc_v1/wit/: learner-wrpc.wit
simple-paxos-demo/wrpc_v2/: Cargo.toml  README.md
simple-paxos-demo/wrpc_v2/acceptor/: Cargo.toml
simple-paxos-demo/wrpc_v2/learner/: Cargo.toml
simple-paxos-demo/wrpc_v2/paxos-wrpc/: Cargo.toml
simple-paxos-demo/wrpc_v2/proposer/: Cargo.toml
simple-paxos-demo/wrpc_v2/proposer-wrpc/: Cargo.toml
simple-paxos-demo/wrpc_v2/src/: main.rs
simple-paxos-demo/wrpc_v2/utils/: Cargo.toml
simple-paxos-demo/wrpc_v2/wit/: command-wrpc.wit  learner-wrpc.wit  paxos-wrpc.wit  proposer-wrpc.wit
(+342 files in other folders)
