[package]
name = "paxos-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["basic"]
basic = []
advanced = []
distributed = []

[[bin]]
name = "paxos-rust"
path = "src/main.rs"
