[package]
name = "proposer"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.38.0", features = ["bitflags"] }
rand = "0.8"

[lib]
crate-type = ["cdylib"]

# [profile.release]
# codegen-units = 1
# opt-level = "s"
# debug = false
# strip = true
# lto = true

[package.metadata.component]
package = "paxos:proposer"

[package.metadata.component.target.dependencies]
"paxos:acceptor" = { path = "../wit/acceptor" }

[package.metadata.component.target]
path = "../wit/proposer"
world = "proposerworld"
