[package]
name = "composed-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { path = "../shared/proto", package = "proto" }

tonic = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wasmtime = "33"
wasmtime-wasi = "33"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tempfile = "3"

dashmap = "5"
once_cell = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[build-dependencies]
paxos-wasm-utils = { path = "../shared/utils" }
core = { path = "../core" }
agents = { path = "../agents" }
