[package]
edition = "2021"
name = "runners-ws"
version = "0.1.0"

[dependencies]
base64 = "0.21"
clap = { version = "4.5", features = ["derive"] }
dashmap = "5"
futures = "0.3"
once_cell = "1"
tempfile = "3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
    "rt-multi-thread",
] }
byteorder = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = "33"
wasmtime-wasi = "33"
yaml-rust = "0.4"
anyhow = "1"

[build-dependencies]
agents = { path = "../agents" }
network-ws = { path = "../network-ws" }
paxos-wasm-utils = { path = "../shared/utils" }
runners = { path = "../runners" }
