[package]
name = "grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../shared/utils", package = "shared-wasmtime-utils" }
proto = { path = "../grpc/proto-grpc", package = "proto-grpc" }

tonic = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
prost-types = "0.11"
wasmtime = "30"
wasmtime-wasi = "30"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.9"

# paxos-grpc = { path = "paxos-grpc" }
