[package]
name = "simple-paxos-wasm-demo"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "paxos-wasm"
# path = "src/main.rs"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
log = "0.4"
env_logger = "0.10"
wit-bindgen = "0.39.0"
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
anyhow = "1.0.95"
simple-paxos-wasm-utils = { path = "./utils" }

# Comment out or remove these dependencies since they are precompiled as Wasm components
# proposer = { path = "proposer" }
# acceptor = { path = "acceptor" }
# learner = { path = "learner" }
