[package]
name = "paxos-wasm-wrpc-v2"
version = "0.2.0"
edition = "2021"

# [lib]
# crate-type = ["rlib"]

[dependencies]
log = "0.4"
# wit-bindgen = "0.38.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net"] }
wrpc-transport = "0.28.3"
wit-bindgen-wrpc = "0.9.0"
anyhow = { version = "1", features = ["std"] }

utils-wrpc_v2 = { path = "./utils" }
proposer-wrpc-v2 = { path = "./proposer-wrpc", package = "proposer-wrpc-v2" }


# proposer-wrpc-v2-native = { path = "./proposer", package = "proposer-wrpc-v2-native" }
# acceptor-wrpc-v2-native = { path = "./acceptor", package = "acceptor-wrpc-v2-native" }
# learner-wrpc-v2-native = { path = "./learner", package = "learner-wrpc-v2-native" }
