[package]
name = "paxos_v0_0_1_acceptor"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.38.0", features = ["bitflags"] }
lazy_static = "1.4"

[lib]
crate-type = ["cdylib"]

# [profile.release]
# codegen-units = 1
# opt-level = "s"
# debug = false
# strip = true
# lto = true

[package.metadata.component]
package = "paxos:acceptor"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "../wit/acceptor"
world = "acceptor"
