[package]
name = "paxos_v0_0_2_acceptor"
version = "0.1.0"
edition = "2021"

[dependencies]
# wit-bindgen = "0.38.0"
wit-bindgen-rt = { version = "0.38.0", features = ["bitflags"] }
lazy_static = "1.4"
# wit-bindgen.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "paxos:acceptor"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "../wit/acceptor"
world = "acceptorworld"
