[package]
name = "paxos_v0_0_3_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
tokio = { version = "1.24", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
prost-types = "0.11"
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"

[build-dependencies]
tonic-build = "0.9"


[[bin]]
name = "acceptor"        # The server
path = "src/acceptor.rs"

[[bin]]
name = "proposer"        # The client
path = "src/proposer.rs"
