[package]
name = "proposer-wrpc-v2"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
# wit-bindgen = "0.39.0"
wit-bindgen-wrpc = "0.9.0"
anyhow = "1"
# wrpc = "0.14.0"
tracing-subscriber = "0.3.19"
tokio = { version = "1.43", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
] }

utils-wrpc_v2 = { path = "../utils" }

# [[bin]]
# name = "paxos_wasm_wrpc_v2"
# path = "src/main.rs"
