[package]
name = "composed-grpc-command"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
wit-bindgen = "0.39"
anyhow = "1"

# shared-utils = { path = "../../shared/utils" }

[package.metadata]
# cargo.build-disabled = true  # Custom flag to indicate this shouldn't be built by default
