[package]
edition = "2024"
name = "acceptor"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
path = "src/acceptor.rs"

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2", features = ["serde"] }
wit-bindgen = "0.41"

# shared-utils = { path = "../../shared/utils" }

[package.metadata]
# cargo.build-disabled = true  # Custom flag to indicate this shouldn't be built by default
