[package]
edition = "2024"
name = "storage"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
path = "src/storage.rs"

[dependencies]
serde_json = "1.0"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
byteorder = "1.5"
wasi = "0.14.2"
wit-bindgen = "0.41"

# shared-utils = { path = "../../shared/utils" }

[package.metadata]
# cargo.build-disabled = true  # Custom flag to indicate this shouldn't be built by default
