[package]
name = "tcp-server-polling-test-server"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-executor = "0.3.31"
futures = "0.3.31"
tokio = { version = "1.44.1", features = [
    # All allowed tokio features
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
wasi = "0.14.2"
wit-bindgen = "0.41"
