[package]
name = "acceptor-grpc"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/acceptor-grpc.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
wit-bindgen = "0.39"
wasmtime = "30"
wasmtime-wasi = "30"
anyhow = "1"
tokio = "1"

shared-utils = { path = "../../shared/utils" }

[package.metadata]
# cargo.build-disabled = true  # Custom flag to indicate this shouldn't be built by default
