[package]
name = "client-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.9", features = ["transport"] }

proto = { path = "../proto-grpc", package = "proto-grpc" }
